--- a/DockerFile
+++ b/DockerFile
@@ -1,25 +1,21 @@
-# 1️⃣ Use official Node.js LTS image
-FROM node:18-alpine
+# 1️⃣ Base image
+FROM node:20-alpine
 
-# 2️⃣ Set working directory inside container
+# 2️⃣ Set working directory
 WORKDIR /app
 
-# 3️⃣ Copy package files first (better caching)
-COPY package*.json ./
+# 3️⃣ Copy package files first (for caching)
+COPY src/package*.json ./
 
 # 4️⃣ Install dependencies
 RUN npm install --production
 
-# 5️⃣ Copy rest of the backend code
-COPY . .
+# 5️⃣ Copy the rest of the code
+COPY src/ ./
 
-
+# 6️⃣ Expose port
 ENV PORT=4040
-ENV MONGODB_CLOUD_URL="mongodb+srv://test:test@cluster0.0fwtzpa.mongodb.net/alclinic"
-ENV JWT_SECRET="lAEn5HehBMgYVjjJ"
-
-# 6️⃣ Expose backend port
 EXPOSE 4040
 
 # 7️⃣ Start the server
-CMD ["npm", "start"]
+CMD ["node", "server.js"]
