--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
       dockerfile: DockerFile
     ports:
       - "4040:4040"
+    environment:
+      PORT: ${PORT}
+      MONGODB_CLOUD_URL: ${MONGODB_CLOUD_URL}
+      JWT_SECRET: ${JWT_SECRET}
     networks:
       - alclinic-net
 
