--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2️⃣ Build backend Docker image
+      # 2️⃣ Build backend Docker image locally (optional, mainly for caching)
       - name: Build Backend Docker Image
         run: docker build -t alclinic-backend -f DockerFile .
 
-      # 3️⃣ Setup SSH
+      # 3️⃣ Setup SSH for connecting to VPS
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
@@ -31,10 +31,16 @@ jobs:
             --exclude="node_modules" \
             ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/alclinic_backend
 
-      # 5️⃣ Run Docker Compose on remote
+      # 5️⃣ Run Docker Compose on remote with environment variables
       - name: Run Docker Compose remotely
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
             cd /home/${{ secrets.SSH_USER }}/alclinic_backend
+            # Export secrets so Docker Compose and Node can use them
+            export PORT=${{ secrets.PORT }}
+            export MONGODB_CLOUD_URL=${{ secrets.MONGODB_CLOUD_URL }}
+            export JWT_SECRET=${{ secrets.JWT_SECRET }}
+            
+            # Start or rebuild Docker Compose
             docker compose up -d --build
           EOF
